[package]
name = "ascii-vault"
version = "1.0.0"
edition = "2021"
authors = ["Ren <lorediggia@gmail.com>"]
description = "Rust TUI vault to manage ASCII art and terminal logos."
license = "GPL-3.0-only"
repository = "https://github.com/lorediggia/ascii-vault"
keywords = ["tui", "ascii", "fastfetch", "rust", "wayland"]
categories = ["command-line-utilities"]

[dependencies]
crossterm = "0.27.0"
ratatui = "0.26.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
